fixed spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,9 @@ header {
 
 .logo {
   width: 100%;
-  margin: 20% 0;
+  margin: 10vh 0;
+  /* margin-bottom: 0; */
+
 }
 
 h1, h2 {
@@ -157,6 +159,8 @@ main {
   /* max-height: 320px; */
   min-width: 310px;
   margin-right: 30px;
+  padding: 25px;
+
   /* overflow-y: scroll; */
   box-shadow:  -1px 0 0 transparent ,2px 2px 100px #111, 0 0 25px #111
   /* , 0 0 20px rgb(35, 200, 225)
@@ -165,21 +169,16 @@ main {
   ;
   border-bottom-right-radius: 50px;
   clip-path: inset(-100px -100px -100px 0px);
+  background-color: rgba(247, 235, 250, .9);
 }
 
 main::before {
   box-shadow: none;
 }
 
-.content {
-  min-height: 200px;
+.content p {
   min-width: 310px;
-  width: 100%;
-
-  padding: 15px;
-  padding-right: 50px;
-  background-color: rgba(247, 235, 250, 0.9);
-
+  margin: 0;
   border-bottom-right-radius: 50px;
 }
 
@@ -194,7 +193,6 @@ a:hover{
 
 footer {
   width: 100%;
-  /* height: 80px; */
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -202,7 +200,6 @@ footer {
   position: relative;
 
   bottom: 0;
-  /* padding: 0 10px; */
   font-family: 'Roboto Mono', monospace;
 }
 nav {
@@ -270,11 +267,13 @@ footer a:active {
 /****************************************/
 
 @media only screen and (min-width: 768px) {
+  .bg-arc { 
+    padding: 0 5%;
+  }
+  
   header {
-    /* height: 120px; */
-    /* width: 100%; */
+    max-width: 800px;
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
     align-items: center;
 
@@ -283,31 +282,40 @@ footer a:active {
 
   .logo {
     /* width: 45%; */
+    max-width: 1000px;
+    margin: 10% 0;
+    position: relative;
+    bottom: 50px;
+    /* background-color: rgb(35, 200, 225); */
   }
 
   #raison {
+    /* background-color: rgb(35, 200, 225); */
+
+    /* height: 136px; */
     /* display: flex; */
     max-height: none;
-    width: 45%;
+    width: 30%;
     display: inline-block;
-
+    position: relative;
+    bottom: 45px;
     margin: 0;
+    /* margin: 10px 0; */
+
     border: none;
     border-radius: 0px;
 
     box-shadow: none;
-    background: none;
-
+    /* background: none; */
     color: rgb(250, 235, 240);
-    /* font-size: 18px; */
-    /* text-align: right; */
   }
 
   main {
     margin: 0 auto;
-    max-width: 600px; 
+    max-width: 800px; 
     border-radius: 50px;
     border-top-right-radius: 0;
+    padding: 35px;
     clip-path: none;
   }
 
@@ -316,7 +324,7 @@ footer a:active {
     margin: 0;
     border-radius: 50px;
     border-top-right-radius: 0;
-    padding: 20px;
+    padding: 0;
   }
 }
 
